完善了RandomInfo类